I installed prettier eslint-config-prettier eslint-plugin-prettier. I created the prettier.config.js file and configured the rules. I installed the Editor Confg extension and created the .editorconfig file for prettier to be compatible with windows

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "extends": [
         "plugin:react/recommended",
         "standard",
-        "plugin:react-hooks/recommended"
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -18,9 +19,11 @@
     "plugins": [
         "react",
         "eslint-plugin-import-helpers",
-        "react-hooks"
+        "react-hooks",
+        "prettier"
     ],
     "rules": {
+        "prettier/prettier": "error",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "import-helpers/order-imports": [
