--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "prettier/prettier": "error",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
+        "no-unused-vars": "warn",
         "import-helpers/order-imports": [
             "warn",
             { // example configuration
