--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
