--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
+    "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
