--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.26.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
