--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.26.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.4.0",
     "react-toastify": "^8.1.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
